src/objects/Environment__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Project_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CI Project Definition</label>
        <referenceTo>ProjectDefinition__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_Url__c</fullName>
        <label>Instance Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaging?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Environment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must choose an Enviroment that is a member of the same Project Definition</errorMessage>
            <filterItems>
                <field>Environment__c.CI_Project_Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.CI_Project_Definition__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Child_Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signup_Request_Status__c</fullName>
        <label>Signup Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch_Name__c</columns>
        <columns>CI_Project_Definition__c</columns>
        <columns>Namespace__c</columns>
        <columns>Signup_Request_Status__c</columns>
        <columns>Instance_Url__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Packaging_False</fullName>
        <active>true</active>
        <errorConditionFormula>Packaging__c == false &amp;&amp; NOT(ISBLANK( Namespace__c ))</errorConditionFormula>
        <errorDisplayField>Namespace__c</errorDisplayField>
        <errorMessage>You cannot specify a Namespace if this Environment is not specified as a Packaging Environment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Packaging_True</fullName>
        <active>true</active>
        <errorConditionFormula>Packaging__c == True &amp;&amp; ISBLANK(Namespace__c)</errorConditionFormula>
        <errorDisplayField>Namespace__c</errorDisplayField>
        <errorMessage>You must specify a Namespace for this Packaging Environment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Name_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>Name cannot be changed after creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Namespace</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Packaging__c = True, ISBLANK(Namespace__c))</errorConditionFormula>
        <errorMessage>Namespace is required when packaging is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_No_Namespace</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Packaging__c = false, NOT(ISBLANK(Namespace__c)))</errorConditionFormula>
        <errorMessage>Cannot have namespace if environment is not packaging.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Parent_Environment</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Parent_Environment__c),Packaging__c = False,Production__c = False)</errorConditionFormula>
        <errorMessage>Environment must have parent unless packaging or production.</errorMessage>
    </validationRules>
</CustomObject>